# luster-ko

./: .gitignore  CMakeLists.txt  COPYING  README.md
.github/workflows/: ci_windows.yaml
scripts/: generate_exp.md  generate_exp.py  requirements.txt  script.py
sources/: PythonConsoleRedirector.h  ScriptModel.cpp  ScriptModel.h  app_enums.h  datasingleton.cpp  datasingleton.h  imagearea.cpp  imagearea.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  undocommand.cpp  undocommand.h
sources/dialogs/: effectsettingsdialog.cpp  effectsettingsdialog.h  resizedialog.cpp  resizedialog.h  settingsdialog.cpp  settingsdialog.h  textdialog.cpp  textdialog.h
sources/effects/: abstracteffect.cpp  abstracteffect.h  binarizationeffect.cpp  binarizationeffect.h  customeffect.h  effectruncallback.h  effectwithsettings.cpp  effectwithsettings.h  gammaeffect.cpp  gammaeffect.h  gaussianblureffect.h  grayeffect.cpp  grayeffect.h  negativeeffect.cpp  negativeeffect.h  scripteffect.cpp  scripteffectwithsettings.cpp  scripteffectwithsettings.h  sharpeneffect.h
sources/instruments/: abstractinstrument.cpp  abstractinstrument.h  abstractselection.cpp  abstractselection.h  colorpickerinstrument.cpp  colorpickerinstrument.h  curvelineinstrument.cpp  curvelineinstrument.h  ellipseinstrument.cpp  ellipseinstrument.h  eraserinstrument.cpp  eraserinstrument.h  fillinstrument.cpp  fillinstrument.h  lineinstrument.cpp  lineinstrument.h  magnifierinstrument.cpp  magnifierinstrument.h  pencilinstrument.cpp  pencilinstrument.h  rectangleinstrument.cpp  rectangleinstrument.h  selectioninstrument.cpp  selectioninstrument.h  sprayinstrument.cpp  sprayinstrument.h  textinstrument.cpp  textinstrument.h
sources/media/: luster-ko.desktop
sources/translations/: translations_cs_CZ.ts  translations_fr_FR.ts  translations_ru_RU.ts  translations_zh_CN.ts
sources/widgets/: PythonConsoleWidget.cpp  PythonConsoleWidget.h  abstracteffectsettings.h  colorchooser.cpp  colorchooser.h  customfiltersettings.cpp  customfiltersettings.h  gaussianblurfiltersettings.cpp  gaussianblurfiltersettings.h  palettebar.cpp  palettebar.h  palettebutton.cpp  scripteffectsettings.cpp  sharpenfiltersettings.cpp  sharpenfiltersettings.h  shortcutedit.cpp  shortcutedit.h  toolbar.cpp  toolbar.h
